--- a/1.md
+++ b/1.md
@@ -1,5 +1,19 @@
 **Nmap — Part 1: Install, Run & Read Output (Beginners)**
 
+`Yo guys, welcome back to TirthSec — where we don’t just talk about cybersecurity, we do cybersecurity.
+Today, we’re kicking off the Nmap series — the real foundation of network scanning and recon. So grab your Kali, and let’s start`
+
+`“Before we even start — this is important — only scan systems you own or have written permission to test. Don’t go scanning random websites or networks. Keep your learning clean and ethical.”`
+
+`“Alright, so what actually is Nmap?
+Nmap stands for ‘Network Mapper’.
+Think of it like a digital radar for networks — it pings around and tells you who’s online, which doors are open — meaning ports — and what kind of services might be running behind them.
+It’s one of the first tools every pentester learns because it’s fast, flexible, and super powerful once you know how to use it.”`
+
+`“If you’re using Kali Linux, Parrot OS, or any security-focused distro — good news — Nmap is already preinstalled.
+But if you’re using Ubuntu or Debian-based systems and don’t have it, just run this command:”`
+
+
 # Target length
 
 ~10–13 minutes
